# UML-robotics-project

./: .gitignore  README.md
arbiter/: CMakeLists.txt  package.xml
arbiter/launch/: arb_sr.launch  demo.launch  demo2.launch
arbiter/msg/: OmegaTune.msg  SpeedTune.msg
arbiter/src/: arbiter.py  arbiter_node.py
close_distance/: CMakeLists.txt  package.xml
close_distance/launch/: close.launch  sign_close.launch
close_distance/src/: close_distance_node.py
gentle_stop/launch/: stop-comb.launch
gentle_stop/src/: .gentle_stop_node.py.swp  gentle_stop_node.py
sign_reader/: CMakeLists.txt  package.xml  setup.py
sign_reader/launch/: sign_reader.launch
sign_reader/src/: sign_reader.py  sign_reader_node.py
sign_reader/src/sign_reader/: signInfo.py  sign_reader_node.py
utilities/: CMakeLists.txt  package.xml  setup.py
utilities/src/utilities/: utils.py
